--- a/Aplikacija/KonacniProjekat/Pages/ONama.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ONama.cshtml
@@ -12,7 +12,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="" alt="" /></div>
+                        <div class="timeline-image"><h3>O</h3></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">Početak</h4>
@@ -21,7 +21,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"></div>
+                        <div class="timeline-image"><h3>N</h3></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">Misija</h4>
@@ -30,7 +30,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"></div>
+                        <div class="timeline-image"><h3>T</h3></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4 class="subheading">Vizija</h4>
@@ -41,12 +41,7 @@
                     <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
-                                <br/>
-                                Postani deo
-                                <br />
-                                naše
-                                <br />
-                                Organizacije!
+                               Svet je knjiga, a oni koji ne putuju, čitaju samo jednu stranicu.
                             </h4>
                         </div>
                     </li>
