--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -620,3 +620,23 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
     box-shadow: 0px 5px 5px 0px #70b8ff;
   }
   
+/*TURA-JEDNA*/
+
+.naziv-rezAnk{
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #36b9cc;
+  text-transform: uppercase;
+  margin-bottom: 0.25rem;
+}
+
+.vrednost-rezAnk{
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+  margin-bottom: 0;
+  margin-right: 1rem;
+  font-weight: 700;
+  color: #5a5c69;
+  font-size: 1rem;
+} 
+  
