--- a/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/ZnamenitostSve.cshtml
@@ -8,15 +8,20 @@ ViewData["Title"]="Znamenitosti";
     <h1 class="display-4">Znamenitosti</h1>
 </div>
 
+
+@if(SessionClass.TipKorisnika=="A")
+{
 <nav aria-label="Page navigation">  
     <ul class="pagination justify-content-end">
         <li class="page-item"><a class="page-link" asp-page="./ZnamenitostDodaj">Dodaj znamenitost</a></li>
     </ul>
-</nav>
+</nav> 
+}
 
 <div class="row" style="margin: 0 -70px;">
 @foreach (var znamenitost in Model.SveZnamenitosti) 
-{<div class="column">
+{
+     <div class="column">
     <div class="flip-card-znamenitosti">
         <div class="inner-znamenitosti">
             <div class="front-znamenitosti">
@@ -35,6 +40,6 @@ ViewData["Title"]="Znamenitosti";
             </div>
         </div>
     </div>
-    </div>
+    </div> 
 }
 </div>
