--- a/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/HallOfFame.cshtml
@@ -3,27 +3,41 @@
 @{
 
 }
-<ul class="nav nav-pills grey">
+<ul class="nav nav-pills">
       @foreach (var kviz in Model.sviKvizovi)
       {
   <li class="nav-item">
-    <div class="hof"> <a  class="nav-link" asp-page="./HallOfFame" asp-route-id="@kviz.IdKviza">@kviz.NazivKviza</a></div>
-  </li>
+    <div class="hof"> 
+      @if(kviz.IdKviza==@Model.trenutniKviz.IdKviza)
+    {  
+       <a  class="nav-link active" href="/HallOfFame?id=@kviz.IdKviza">@kviz.NazivKviza</a>
+    }
+   else
+   {
+     <a  class="nav-link" href="/HallOfFame?id=@kviz.IdKviza">@kviz.NazivKviza</a>
+   }
+    </div>
+     </li>
+
       }
 </ul>
-<div style="overflow-y: scroll;  height: 300px;">
-  <table class="table hof">
-    <thead>
+<h3 style="margin-left: 50%;">@Model.trenutniKviz.NazivKviza</h3>
+
+<div style="overflow-y: scroll;  height: 450px;">
+  <table class="table tabela-hof">  
+<thead>
       <tr>
-        <th></th>
+        <th>@Model.trenutniKviz.NazivKviza</th>
         <th>Ime</th>
         <th>Prezime</th>
         <th>Poeni</th>
+        <th>Datum rađenja</th>
       </tr>
     </thead> 
-    <tbody>
+  <tbody>
+  
 @foreach (var hof in Model.HallOfFame)
-{
+{ 
   @foreach (var ucesnik in Model.Turisti)
   {
     if(ucesnik.IdTuriste==hof.IdTuristeHof)
@@ -32,11 +46,13 @@
         <td>@ucesnik.ImeTuriste</td>
         <td>@ucesnik.PrezimeTuriste</td>
         <td>@hof.Poeni</td>
+        <td> @Convert.ToString(string.Format("{0:dd/MM/yyyy}", hof.DatumRadjenja))</td>
       </tr>
   }
   }
+
 }
-</tbody>
+  </tbody>
 </table>
 </div>
 
