--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -20,8 +20,9 @@ a {
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+  background-color: #84c1ff;
+  border-color: #84c1ff;
+  border-radius: 25px;
 }
 
 /* Sticky footer styles
@@ -144,12 +145,16 @@ input[type=text]:placeholder
 }
 
 /*Hall of fame*/
+
 .hof
 {
-  background-color: #fbfbfb;
-  background-image: linear-gradient(315deg, #fbfbfb  0%, #dcdcdc 72%);
+  border-radius: 25px;
+  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.3); 
 }
-
+.tabela-hof{
+  background-color: #84c1ff   ;
+  background-image: linear-gradient(175deg, #84c1ff    0%, #eaf4ff   74%);
+}
 /*Pocetna stranica*/
 
 .kartice-sa-slikama {
