--- a/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizDodajPitanje.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div class="text-left">
-    <h3><a asp-page="./KvizJedan" asp-route-id="@Model.SessionId" asp-route-kviz="@Model.KvizId">Vrati se na prikaz kviza</a></h3>
+    <h3><a asp-page="./KvizJedan" asp-route-id="@Model.KvizId">Vrati se na prikaz kviza</a></h3>
 </div>
 
 <form method="post">
