--- a/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/KvizIzmeni.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div class="text-left">
-    <h3><a asp-page="./KvizSvi" asp-route-id="@Model.SessionId">Prikaži listu svih kvizova</a></h3>
+    <h3><a asp-page="./KvizSvi">Prikaži listu svih kvizova</a></h3>
 </div>
 
 <form method="post">
