--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -644,4 +644,21 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
   color: #5a5c69;
   font-size: 1rem;
 } 
+
+/*KVIZ-URADI*/
+.PitanjeDiv{
+  color: #0366d6;
+}
+
+.PUnutrasnjiDiv
+{
+  /*color: #00AAFF;*/
+}
+
+.PitanjeBorder
+{
+  border: thick solid;
+  border-color: #a4dbdd;
+  border-style: ridge;
+}
   
