--- a/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/TuraRezervisi.cshtml
@@ -12,12 +12,17 @@
 <div id="formContent">
 <form method="post">
 
+    <input type="hidden" asp-for="@Model.KapacitetTure" />
+    <input type="hidden" asp-for="@Model.TuraId" />
+    <input type="hidden" asp-for="@Model.NeuspesnaRezervacija" />
 
     <label class="form-control select-fit-text">Datum odrzavanja:</label>
         <input type="date" asp-for="RezervacijaTure.Datum" class="form-control" placeholder="Datum odrzavanja"  />
 
     <label class="form-control">Broj osoba:</label>
         <input asp-for="RezervacijaTure.BrojOsoba" class="form-control" min="1"; max="100"; placeholder="Broj osoba" required  />
+
+        
 
      <div>
         <button type="submit">Rezervisi turu</button>
@@ -26,3 +31,7 @@
 </form>
 </div>
 </div>
+
+@if(Model.NeuspesnaRezervacija!=null && Model.NeuspesnaRezervacija!=0){
+     <div class="alert alert-danger" role="alert" style="text-align: center;">Popunjen je kapacitet ove ture. Smanjite broj osoba ili rezervisite drugu turu.</div> 
+}
