--- a/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Shared/_Layout.cshtml
@@ -54,6 +54,21 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Registracija">Registruj se</a>
                         </li>
                          }
+
+                    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fas fa-bars fa-1x"></i>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/VodicSvi">Vodiči</a>
+          <a class="dropdown-item" href="/TuraSve">Ture</a>
+          <a class="dropdown-item" href="/ZnamenitostSve">Znamenitosti</a>
+          <a class="dropdown-item" href="/RezervacijaSve">Rezervacije</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/HallOfFame?id=1">Hall Of Fame</a>
+           <a class="dropdown-item" href="/KvizSvi">Kvizovi</a>
+        </div>
+      </li>
                     </ul>
                 </div>
             </div>
