--- a/Aplikacija/KonacniProjekat/Pages/Profil.cshtml
+++ b/Aplikacija/KonacniProjekat/Pages/Profil.cshtml
@@ -3,3 +3,76 @@
 @{
     ViewData["Title"] = "Profil";
 }
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+  <ul class="nav nav-tabs">
+    <li class="active"><a data-toggle="tab" href="#podaci">Podaci</a></li>
+    <li><a data-toggle="tab" href="#menu1">Rezervacije</a></li>
+    <li><a data-toggle="tab" href="#menu2">Ocenjivanje</a></li>
+    <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="podaci" class="tab-pane fade in active">
+      <p>@SessionClass.ImeKorisnika</p>
+    </div>
+    <div id="menu1" class="tab-pane fade">
+      <h3>Menu 1</h3>
+      
+<div>
+    <table class="table table-bordered">
+        <thead>
+            <th>ID rezervacije</th>
+            <th>Id ture</th>
+            <th>ID turiste</th>
+            <th></th>
+        </thead>
+        <tbody>
+            <form method="get">
+                @foreach (var rezervacija in Model.SveRezervacije)
+                {
+                    <tr>
+                        <td>@rezervacija.IdRezervacije</td>
+                        <td>@rezervacija.IdTureR</td>
+                        <td>@rezervacija.IdTuristeR</td>
+                    </tr>
+                }
+            </form>
+        </tbody>
+    </table>
+</div>
+
+    </div>
+    <div id="menu2" class="tab-pane fade">
+      <h3>Ocene koje ste dali vodicima</h3>
+     
+<div>
+    <table class="table table-bordered">
+        <thead>
+            <th>ID ocene</th>
+            <th>Id vodica</th>
+            <th>Ocene</th>
+            <th></th>
+        </thead>
+        <tbody>
+            <form method="get">
+                @foreach (var ocene in Model.SveOcene)
+                {
+                    <tr>
+                        <td>@ocene.IdOcenjivanja</td>
+                        <td>@ocene.IdVodicaO</td>
+                        <td>@ocene.Ocena</td>
+                    </tr>
+                }
+            </form>
+        </tbody>
+    </table>
+</div>
+    </div>
+    <div id="menu3" class="tab-pane fade">
+      <h3>Menu 3</h3>
+      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
+  </div>
