--- a/Aplikacija/KonacniProjekat/wwwroot/css/site.css
+++ b/Aplikacija/KonacniProjekat/wwwroot/css/site.css
@@ -96,13 +96,7 @@ body {
   background-image: linear-gradient(315deg, #84c1ff  0%, #eaf4ff  74%);
 }
 
-input[type=button], input[type=submit]{
 
-}
-input[type=submit]:active
-{
-  
-}
 input[type=button]:hover, input[type=submit]:hover{
   background-color: #84c1ff ;
 } 
@@ -638,6 +632,23 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
   
 /*TURA-JEDNA*/
 
+.hr-ONT {
+  background-color: #36b9cc;
+}
+
+.bg-info {
+  background-color: #36b9cc;
+}
+
+.TuraJednaGlavniDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.TuraJednaGlavniDiv * {
+  width: 100%;
+}
 .naziv-rezAnk{
   font-size: 1.5rem;
   font-weight: 700;
@@ -655,128 +666,7 @@ background-image: linear-gradient(315deg, #eaf4ff   0%, #84c1ff  79%);
   color: #5a5c69;
   font-size: 1rem;
 } 
+
+
   
-
-
-
-.scene {
-  width: 200px;
-  height: 200px;
-  border: 1px solid #CCC;
-  margin: 80px;
-  perspective: 400px;
-}
-
-.cube {
-  width: 200px;
-  height: 200px;
-  position: relative;
-  transform-style: preserve-3d;
-  transform: translateZ(-100px);
-  transition: transform 1s;
-}
-
-.cube.show-front  { transform: translateZ(-100px) rotateY(   0deg); }
-.cube.show-right  { transform: translateZ(-100px) rotateY( -90deg); }
-.cube.show-back   { transform: translateZ(-100px) rotateY(-180deg); }
-.cube.show-left   { transform: translateZ(-100px) rotateY(  90deg); }
-.cube.show-top    { transform: translateZ(-100px) rotateX( -90deg); }
-.cube.show-bottom { transform: translateZ(-100px) rotateX(  90deg); }
-
-.cube__face {
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  border: 2px solid black;
-  line-height: 200px;
-  font-size: 40px;
-  font-weight: bold;
-  color: white;
-  text-align: center;
-}
-/*
-.cube__face--front  { background: hsla(  0, 100%, 50%, 0.7); }
-.cube__face--right  { background: hsla( 60, 100%, 50%, 0.7); }
-.cube__face--back   { background: hsla(120, 100%, 50%, 0.7); }
-.cube__face--left   { background: hsla(180, 100%, 50%, 0.7); }
-.cube__face--top    { background: hsla(240, 100%, 50%, 0.7); }
-.cube__face--bottom { background: hsla(300, 100%, 50%, 0.7); }
-
-.cube__face--front  { transform: rotateY(  0deg) translateZ(100px); }
-.cube__face--right  { transform: rotateY( 90deg) translateZ(100px); }
-.cube__face--back   { transform: rotateY(180deg) translateZ(100px); }
-.cube__face--left   { transform: rotateY(-90deg) translateZ(100px); }
-.cube__face--top    { transform: rotateX( 90deg) translateZ(100px); }
-.cube__face--bottom { transform: rotateX(-90deg) translateZ(100px); }
-
-
-
-.spinner div {
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  border: 1px solid #ccc;
-  background: rgba(255,255,255,0.8);
-  box-shadow: inset 0 0 20px rgba(0,0,0,0.2);
-  text-align: center;
-  line-height: 120px;
-  font-size: 100px;
-}
-
-.spinner .face1 { 
-  -webkit-transform: translateZ(60px);
-  -ms-transform: translateZ(60px);
-  transform: translateZ(60px);
-}
-.spinner .face2 { 
-  -webkit-transform: rotateY(90deg) translateZ(60px); 
-  -ms-transform: rotateY(90deg) translateZ(60px); 
-  transform: rotateY(90deg) translateZ(60px); 
-}
-.spinner .face3 { 
-  -webkit-transform: rotateY(90deg) rotateX(90deg) translateZ(60px); 
-  -ms-transform: rotateY(90deg) rotateX(90deg) translateZ(60px); 
-  transform: rotateY(90deg) rotateX(90deg) translateZ(60px); 
-}
-.spinner .face4 { 
-  -webkit-transform: rotateY(180deg) rotateZ(90deg) translateZ(60px); 
-  -ms-transform: rotateY(180deg) rotateZ(90deg) translateZ(60px); 
-  transform: rotateY(180deg) rotateZ(90deg) translateZ(60px); 
-}
-.spinner .face5 { 
-  -webkit-transform: rotateY(-90deg) rotateZ(90deg) translateZ(60px); 
-  -ms-transform: rotateY(-90deg) rotateZ(90deg) translateZ(60px); 
-  transform: rotateY(-90deg) rotateZ(90deg) translateZ(60px); 
-}
-.spinner .face6 { 
-  -webkit-transform: rotateX(-90deg) translateZ(60px); 
-  -ms-transform: rotateX(-90deg) translateZ(60px); 
-  transform: rotateX(-90deg) translateZ(60px); 
-}
-
-.spinner {
-  -webkit-animation: spincube 12s ease-in-out infinite;
-  animation: spincube 12s ease-in-out infinite;
-  -webkit-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-transform-origin: 60px 60px 0;
-  -ms-transform-origin: 60px 60px 0;
-  transform-origin: 60px 60px 0;
-}
-
-@-webkit-keyframes spincube {
-  16%      { -webkit-transform: rotateY(-90deg);                }
-  33%      { -webkit-transform: rotateY(-90deg) rotateZ(90deg); }
-  50%      { -webkit-transform: rotateY(180deg) rotateZ(90deg); }
-  66%      { -webkit-transform: rotateY(90deg) rotateX(90deg);  }
-  83%      { -webkit-transform: rotateX(90deg);                 }
-}
-@keyframes spincube {
-  16%      { -ms-transform: rotateY(-90deg); transform: rotateY(-90deg); }
-  33%      { -ms-transform: rotateY(-90deg) rotateZ(90deg); transform: rotateY(-90deg) rotateZ(90deg); }
-  50%      { -ms-transform: rotateY(180deg) rotateZ(90deg); transform: rotateY(180deg) rotateZ(90deg); }
-  66%      { -ms-transform: rotateY(90deg) rotateX(90deg); transform: rotateY(90deg) rotateX(90deg); }
-  83%      { -ms-transform: rotateX(90deg); transform: rotateX(90deg); }
-}*/
 
